<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="username">Username:</string>
    <string name="usernamehint">Please enter your username</string>
    <string name="submit">Submit</string>
    <string name="password">Password:</string>
    <string name="confirm">Confirm:</string>
    <string name="passwordhint">Please enter a password</string>
    <string name="confirmhint">Please confirm your password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_format">Welcome %1$s!</string>


</resources>
